--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="flap"></div>
             <div class="heart"><a href="index2.html">❤️</a></div>
             <div class="face"></div>
-            <p class="text-show">preciona el corazon (chiquito) </p>
+            <p class="text-show">presiona el corazon (chiquito) </p>
         </div>
     </div>
     
