--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎉</text></svg>">
 </head>
 <body>
-    <h1 class="text-clamp">Desliza hacia abajo😉</h1>
+    <h1 class="text-clamp">Desliza hacia arriba😉</h1>
     <div class="grid-template">
         <div class="envelope">
             <div class="flap"></div>
